# hpp-manipulation-corba

./: CMakeLists.txt  flake.nix  package.xml  pyproject.toml
.github/workflows/: update-flake-lock.yml
idl/hpp/manipulation_idl/: _path_planners.idl  steering_methods.idl
src/: CMakeLists.txt  problem.impl.cc  robot.impl.cc
src/hpp/corbaserver/manipulation/: constraint_graph.py  constraint_graph_factory.py  problem_solver.py  robot.py
tests/: check_core_idl.py
