<?xml version="1.0"?>
<package format="3">
  <name>hpp-manipulation-corba</name>
  <version>6.1.0</version>
  <description>Corba server for manipulation planning </description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <author>Joseph Mirabel</author>
  <author>Florent Lamiraux et al.</author>

  <license>BSD-2</license>

  <url type="website">https://github.com/humanoid-path-planner/hpp-manipulation-urdf</url>
  <url type="repository">https://github.com/humanoid-path-planner/hpp-manipulation-urdf</url>
  <url type="bugtracker">https://github.com/humanoid-path-planner/hpp-manipulation-urdf/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>doxygen</build_depend>

  <depend>coal</depend>
  <depend>eigen</depend>
  <depend>hpp-corbaserver</depend>
  <depend>hpp-manipulation</depend>
  <depend>hpp-manipulation-urdf</depend>
  <!-- Required by CMake, but not available in rosdep -->
  <!-- <depend>omniDynamic4</depend> -->
  <depend>urdfdom</depend>

  <!-- The following tags are recommended by REP-136 -->
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
